# Data-koleji-oyun

./: .gitignore  OYUNU_BASLAT.md  QUICKSTART.md  SUNUCU_BASLAT.md  banyo.py  dialogue.py  enemy.py  enemy_advanced.py  game_engine.py  game_save.json  get_dims.py  index.html  launch_dashboard.sh  main_combat_system.py  menu.py  os.html  player.py  run.py  scale_mananger.py  scene.py  server_manager.py  settings.json  start_all.bat  start_backend.bat  start_backend_ngrok.bat  start_frontend.bat  style.css  temp_npc.txt  temp_npc_utf8.txt  temp_spawn.txt  test_tk.py
assets/: README.md
backend/: README.md  app.py  config.py  requirements.txt  test_api.py
backend/middleware/: auth.py
backend/models/: __init__.py  leaderboard.py  save_game.py  user.py
backend/routes/: __init__.py  auth.py  leaderboard.py  saves.py
backend/utils/: validators.py
devresim/: index.html  style.css
devresim/js/: components.js  engine.js  ui.js
fonts/: fonts - Shortcut.lnk
js/: api.js  combat.js  computer.js  demoScene.js  dialogue.js  enemy.js  game.js  menu.js  npc.js  paper_plane.js  player.js  scene.js  stone.js  utils.js  webgl-renderer.js  webgpu-renderer.js
raylib_port/: CMakeLists.txt
raylib_port/src/: combat.cpp  combat.h  dialogue.cpp  dialogue.h  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  npc.cpp  npc.h  paper_plane.cpp  paper_plane.h  player.cpp  player.h  scene.cpp  scene.h  stone.cpp  stone.h  utils.h  webview_wrapper.cpp  webview_wrapper.h
utils/: __init__.py  audio.py  storage.py
